# cutiepi-middleware

./: LICENSE  README.md
cutoff/: cutoff.pro  main.cpp
lxpanel-battery-plugin/: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac
lxpanel-battery-plugin/src/: Makefile.am  dbus.c  dbus.h  main.c
mcu-proxy/: cutiepi-mcuproxy.pro  cutiepi-mcuproxy.service  cutiepi-system.conf  main.cpp  mcu-proxy.pro
mcu-proxy/test/: client.qml  gjs-client.js
mcuinfo/: mcuinfo.cpp  mcuinfo.h  mcuplugin.pro  mcuplugin_plugin.cpp  mcuplugin_plugin.h  qmldir  test.qml
mcuproxy@cutiepi.io/: extension.js  metadata.json
process/: plugin.cpp
